hphp/hack/test/typecheck/strict_switch/double_null.php
<?hh

function double_null(null $x): void {
  switch ($x) {
    case null:
      return;
    case null:
      return;
  }
}
